--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h2 class="heading">About <span>Me</span></h2>
       <h3>Frontend Developer!</h3>
       <p>
-        Hello! I'm Tewodros, a passionate frontend developer dedicated to creating captivating and user-centric digital experiences. With a strong foundation in HTML, CSS, and JavaScript, I bring designs to life and ensure seamless interactions on the web.
+        Hello! I'm Selam, a passionate frontend developer dedicated to creating captivating and user-centric digital experiences. With a strong foundation in HTML, CSS, and JavaScript, I bring designs to life and ensure seamless interactions on the web.
         <br>
         <br>
         <span>My Approach</span>
